--- a/index.html
+++ b/index.html
@@ -90,14 +90,14 @@
       </div>
     </section>
 
-    <section class="clever-projects">
+    <section class="request clever-projects">
       <div class="container">
-        <div class="clever-projects__wrap">
-          <div class="clever-projects__text">
-            <h5 class="clever-projects__title">САМЫЕ УМНЫЕ ПРОЕКТЫ</h5>
+        <div class=" request__wrap">
+          <div class=" request__text">
+            <h5 class=" request__title">САМЫЕ УМНЫЕ ПРОЕКТЫ</h5>
             <p>РЕАЛИЗУЕМ САМЫЕ СМЕЛЫЕ РЕШЕНИЯ В РОССИИ!</p>
           </div>
-          <button class="clever-projects__btn">
+          <button class="request__btn">
             ВАШ ЗАПРОС
           </button>
         </div>
@@ -286,6 +286,63 @@
         </div>
       </div>
     </section>
+
+    <section class="work__with-us request">
+      <div class="container">
+        <div class="request__wrap">
+          <div class="request__text">
+            <h5 class="request__title">ХОТИТЕ С НАМИ РАБОТАТЬ?</h5>
+            <p>ОСТАВЬТЕ ЗАЯВКУ И МЫ СВЯЖЕМСЯ С ВАМИ!</p>
+          </div>
+          <button class="request__btn">
+            ВАШ ЗАПРОС
+          </button>
+        </div>
+      </div>
+    </section>
+
+    <section class="contacts">
+      <div class="container">
+        <div class="contacts__subtittle subtittle">Контакты</div>
+        <div class="contacts__items">
+          <div class="contacts__item">
+            <img src="./img/contactsGPS.png" alt="contactsGPS" />
+            <h3>АДРЕС:</h3>
+            <p>НЕВСКИЙ ПРОСПЕКТ 140, ОФИС 140-142</p>
+          </div>
+
+          <div class="contacts__item">
+            <img src="./img/cotactsPhone.png" alt="cotactsPhone" />
+            <h3>ТЕЛЕФОН:</h3>
+            <p>8 (812) 111-22-33 <br />8 (812) 111-22-33</p>
+          </div>
+
+          <div class="contacts__item">
+            <img src="./img/contactsTime.png" alt="contactsTime" />
+            <h3>ВРЕМЯ РАБОТЫ:</h3>
+            <p>
+              ПН-СБ <br />
+              10:00 - 20:00
+            </p>
+          </div>
+
+          <div class="contacts__item">
+            <img src="./img/contactsMail.png" alt="contactsMail" />
+            <h3>E-MAIL:</h3>
+            <p><span>INFO@VIP.RU</span></p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__box">
+          <div class="footer__rights">© 2019 Строительная компания</div>
+          <div class="footer__dev">Cоздал Аnton Holovyn</div>
+        </div>
+      </div>
+    </footer>
 
     <script src="./libs/jquery-3.6.0.min.js"></script>
     <script src="./libs/typed.js"></script>
