--- a/index.html
+++ b/index.html
@@ -308,7 +308,10 @@
           <div class="contacts__item">
             <img src="./img/contactsGPS.png" alt="contactsGPS" />
             <h3>АДРЕС:</h3>
-            <p>НЕВСКИЙ ПРОСПЕКТ 140, ОФИС 140-142</p>
+            <p>
+              НЕВСКИЙ ПРОСПЕКТ 140,<br />
+              ОФИС 140-142
+            </p>
           </div>
 
           <div class="contacts__item">
